--- a/index.html
+++ b/index.html
@@ -1,164 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <title>Bootstrap Project</title>
+  </head>
+  <body class="light-blue">
+    <div class="page-container mx-auto white">
+      <header>
+        <div class="page-header orange"></div>
+        <nav class="navbar navbar-expand-lg navbar-light border-bottom p-0">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
-    <title>Bootstrap project</title>
-</head>
+          <div
+            class="collapse navbar-collapse py-3"
+            id="navbarSupportedContent"
+          >
+            <ul class="navbar-nav d-flex justify-content-between">
+              <li class="nav-item">
+                <a class="nav-link black h5 px-4 m-0 p-0 border-right" href="#"
+                  >U.S.</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link black h5 px-4 p-0 m-0 border-right" href="#"
+                  >World</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link black h5 px-4 p-0 m-0 border-right" href="#"
+                  >Business</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link black h5 px-4 p-0 m-0 border-right" href="#"
+                  >Tech & Science</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link black h5 px-4 p-0 m-0 border-right" href="#"
+                  >Culture</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link black h5 px-4 p-0 m-0 border-right" href="#"
+                  >Newsgeek</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link black h5 px-4 p-0 m-0 border-right" href="#"
+                  >Sports</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link black h5 px-4 p-0 m-0 border-right" href="#"
+                  >Health</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link black px-4 h5 p-0 m-0 border-right" href="#"
+                  >Opinion</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link black h5 px-4 m-0 p-0 border-right" href="#"
+                  >Vantage</a
+                >
+              </li>
 
-<body>
-    <header>
-
-    </header>
-    <nav>
-
-    </nav>
-    <main>
-        <section>
-            <div></div>
-            <div></div>
-            <div></div>
-        </section>
-        <section>
-            <div>Editors Picks</div>
-            <div></div>
-            <div></div>
-        </section>
-        <section>
-            <div>Featured Slideshows</div>
-            <div></div>
-            <div></div>
-        </section>
-        <section>
-            <div>U.S</div>
-            <div></div>
-            <div></div>
-            <div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-        </section>
-        <section>
-            <div>World</div>
-            <div></div>
-            <div></div>
-            <div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-        </section>
-        <section>
-            <div>Business</div>
-            <div></div>
-            <div></div>
-            <div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-        </section>
-        <section>
-            <div>Tech & Science</div>
-            <div></div>
-            <div></div>
-            <div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-        </section>
-        <section>
-            <div>Culture</div>
-            <div></div>
-            <div></div>
-            <div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-        </section>
-        <section>
-            <div>Sports</div>
-            <div></div>
-            <div></div>
-            <div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-        </section>
-        <section>
-            <div>
-                <div>Subscribe</div>
-                <div>
-
-                </div>
-            </div>
-            <div>
-                <div>Newsletter</div>
-                <div></div>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <div>
-            <h1>Newsweek</h1>
-            <p>2019 NEWSWEEK</p>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+              <li class="nav-item dropdown"></li>
             </ul>
-        </div>
-        <div>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-            <div>
-                <label>
-                    Editions:
-                </label>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
+          </div>
+        </nav>
+      </header>
+    </div>
 
-</body>
+    <!--Bootstrap jquery-->
 
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
