--- a/index.html
+++ b/index.html
@@ -91,6 +91,433 @@
           </div>
         </nav>
       </header>
+      <main class="container-fluid py-3 px-5">
+        <section class="row">
+          <div class="col">
+            <div class="block-title pb-2 text-secondary">
+              FEATURED STORIES
+            </div>
+
+            <article class="pb-4">
+              <a href="#">
+                <img
+                  class="w-100"
+                  src="https://d.newsweek.com/en/full/1523806/lurbin-pasita-contreras.jpg?w=397&h=265&q=90&f=c8fad88c2d54ff78355346f42a371029"
+                  alt=""
+                />
+              </a>
+              <a class="d-block py-3 m-0 h5 black" href="#"
+                >Asylum Seekers Turned Back to Honduras Say They'll Never Risk
+                Journey Again</a
+              >
+              <div class="text-dark">
+                "My son almost died. I want a better life, but I won't try
+                again," says Carmen Martinez, who tried to flee with her son to
+                the U.S. from San Pedro Sula, Honduras.
+              </div>
+            </article>
+
+            <article class="pb-4">
+              <a href="#">
+                <img
+                  class="w-100"
+                  src="https://d.newsweek.com/en/full/1503696/gun-free-school-zones-repeal.jpg?w=397&h=265&q=90&f=7a960ec6ab2e124fe05ff49c7cbbec21"
+                  alt=""
+                />
+              </a>
+              <a class="d-block py-3 m-0 h5 black" href="#"
+                >Texas Now Allows Guns in Churches, Schools After Firearm Access
+                Expansion</a
+              >
+              <div class="text-dark">
+                Gun owners in the state of Texas can now legally bring firearms
+                into churches, synagogues and schools after a loosening of
+                restrictions passed by legislators earlier this year.
+              </div>
+            </article>
+
+            <article class="pb-4">
+              <a href="#">
+                <img
+                  class="w-100"
+                  src="https://d.newsweek.com/en/full/1511786/newsweek-momentum-awards-2019.png?w=397&h=265&q=90&f=b5bee11f8b144487ff291880f4d318be"
+                  alt=""
+                />
+              </a>
+              <a class="d-block py-3 m-0 h5 black" href="#"
+                >The Newsweek Momentum Awards</a
+              >
+              <div class="text-dark">
+                The Newsweek Momentum Awards will recognize five individuals
+                around the globe, as well as one city, which will be chosen as
+                the "smartest city in the world."
+              </div>
+            </article>
+
+            <article class="pb-4">
+              <a href="#">
+                <img
+                  class="w-100"
+                  src="https://d.newsweek.com/en/full/1511669/spot-im-logo.png?w=397&h=265&q=90&f=fe63931482a6ab2a1825bd5559fc3c72"
+                  alt=""
+                />
+              </a>
+              <a class="d-block py-3 m-0 h5 black" href="#"> To Our Readers:</a>
+              <div class="text-dark">
+                We always want to hear from you, and to make that easier, we've
+                implemented a new commenting forum. Take a look at the bottom of
+                Newsweek articles. Spot.IM is a tool that helps readers respond
+                to our stories and communicate with one another—and with us. Ask
+                us a question, embed a GIF, point out a mistake. Be civil and
+                respectful, please. And most important: Be in touch.
+              </div>
+            </article>
+
+            <div class="pb-4">
+              <span>
+                <img
+                  src="https://d.newsweek.com/en/full/1519876/carnegie-mellon-university-qatar.jpg?w=343&h=229&f=57c1d19c26bf5286b03b21ad9c7c9fd4"
+                  alt=""
+                />
+              </span>
+              <div class="p-4 border">
+                <h5 class="pb-2 m-0">
+                  <a class="d-block black" href="#"
+                    >Why You Should Be An Engineer & Why ABET Is Important to
+                    that Path.</a
+                  >
+                </h5>
+                <div>
+                  Do you dream of changing the world? Do you want to make a
+                  practical difference in people’s lives? Engineers do both
+                  these things. Find out how to join them.
+                </div>
+              </div>
+            </div>
+
+            <div class="pb-4">
+              <span>
+                <img
+                  src="https://d.newsweek.com/en/full/1519876/carnegie-mellon-university-qatar.jpg?w=343&h=229&f=57c1d19c26bf5286b03b21ad9c7c9fd4"
+                  alt=""
+                />
+              </span>
+              <div class="p-4 border">
+                <h5 class="pb-2 m-0">
+                  <a class="d-block black" href="#"
+                    >Why You Should Be An Engineer & Why ABET Is Important to
+                    that Path.</a
+                  >
+                </h5>
+                <div>
+                  Do you dream of changing the world? Do you want to make a
+                  practical difference in people’s lives? Engineers do both
+                  these things. Find out how to join them.
+                </div>
+              </div>
+            </div>
+
+            <div class="pb-4">
+              <span>
+                <img
+                  src="https://d.newsweek.com/en/full/1511789/best-nursing-homes-2020.png?w=343&h=229&f=e06577dec7407f9f74d2443585296125"
+                  alt=""
+                />
+              </span>
+              <div class="p-4 border">
+                <h5 class="pb-2 m-0">
+                  <a class="d-block black" href="#">Best Nursing Homes</a>
+                </h5>
+                <div class="text-dark">
+                  Newsweek is partnering with the respected global data research
+                  firm Statista Inc. to establish a ranking of Best Nursing
+                  Homes. The final rankings will be published in Newsweek
+                  magazine and on Newsweek.com
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-5">
+            <div class="block-title d-block pb-2 text-secondary">
+              TOP STORY
+            </div>
+
+            <artcle class="d-block pb-4">
+              <a href="#">
+                <img
+                  src="https://d.newsweek.com/en/full/1524418/bahamas.jpg?w=591&h=364&q=90&f=1178b66b546a3df4266ed2d33dbb739d"
+                  alt=""
+                  class="w-100"
+                />
+              </a>
+              <h1 class="h4 py-3 m-0">
+                <a class="d-block black" href=""
+                  >Hurricane Dorian: 7-year-old Boy Is First Reported Death in
+                  Bahamas</a
+                >
+              </h1>
+              <div class="text-dark">
+                The Category 5 storm has ripped off roofs and cut power, leaving
+                many homeless.
+              </div>
+            </artcle>
+
+            <div class="block-title d-block py-2 px-2 light-blue">
+              <a class="text-secondary" href="#">CULTURE & TRAVEL</a>
+            </div>
+
+            <div class="culture w-50 pr-2 float-left light-blue">
+              <img
+                class="w-100"
+                src="https://d.newsweek.com/en/full/1523566/cul-map-fashion-00-use-banner.jpg?w=397&h=265&f=6e6dc176b5debf8bfb261e7d38d7027c"
+                alt=""
+              />
+              <div class="py-3 px-2">
+                <div class="title pb-2">
+                  <a class="h5 text-dark" href="#"
+                    >As NYFW Begins, Take a Tour of the World's Other Fashion
+                    Capitals</a
+                  >
+                </div>
+                <div class="pb-2 f-15 text-secondary">
+                  A series of smaller fashion hubs have sprouted up around the
+                  globe—home to designers who are often more innovative, more
+                  interesting and soon-to-be more influential than long-reigning
+                  design legends.
+                </div>
+                <div class="m-0 p-0">
+                  <a class="category f-14 p-1" href="#">Fashion</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="culture w-50 pl-2 float-right light-blue">
+              <img
+                class="w-100"
+                src="https://d.newsweek.com/en/full/1524036/produce-farmers-market.jpg?w=397&h=265&f=08bca8a71f837226e0796362b65d3edd"
+                alt=""
+              />
+              <div class="py-3 px-2 light-blue">
+                <div class="title pb-2">
+                  <a class="h5 text-dark" href="#"
+                    >How to Succeed at a French Farmers' Market</a
+                  >
+                </div>
+                <div class="pb-2 f-15 text-secondary">
+                  Follow these tips from "Cook Like a Local in France" to win at
+                  the market everytime
+                </div>
+                <div class="m-0 p-0">
+                  <a class="category f-14 p-1" href="#">France</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="clearfix">
+              <div class="culture_2 w-50 d-block pr-2 float-left light-blue">
+                <img
+                  class="w-100"
+                  src="https://d.newsweek.com/en/full/1523961/brave-girls-trip.png?w=397&h=265&f=5207fc465bad1366750387d522824ca8"
+                  alt=""
+                />
+                <div class="py-3 px-2">
+                  <div class="title pb-2">
+                    <a class="h5 text-dark" href="#"
+                      >Sophia Rising: The Story of One Girl Defying the Odds in
+                      Northern Kenya</a
+                    >
+                  </div>
+                  <div class="pb-2 f-15 text-secondary">
+                    Non-profit supporting young women uses travel to promote
+                    self-confidence and education
+                  </div>
+                  <div class="m-0 p-0">
+                    <a class="category f-14 p-1" href="#">Africa</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="culture_2 w-50 d-block pl-2 float-right light-blue">
+                <img
+                  class="w-100"
+                  src="https://d.newsweek.com/en/full/1523666/abdiel-aleman-cooking.jpg?w=397&h=265&f=ee5b3d304c3e81d16ba43ce0db426724"
+                  alt=""
+                />
+                <div class="py-3 px-2 light-blue">
+                  <div class="title pb-2">
+                    <a class="h5 text-dark" href="#"
+                      >A Chef's Success Story: From Bus Boy to Boss</a
+                    >
+                  </div>
+                  <div class="pb-2 f-15 text-secondary">
+                    Chef Abdiel Aleman opens up about his journey to become the
+                    VP of Culinary Development at Ruth's Chris Steak House.
+                  </div>
+                  <div class="m-0 p-0">
+                    <a class="category f-14 p-1" href="#">Chefs</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="block-title clearfix py-2 text-secondary border-bottom">
+              MORE STORIES
+            </div>
+
+            <article class="clearfix py-3 border-bottom">
+              <img
+                src="https://d.newsweek.com/en/full/1524430/hurricane-dorian-atlantic-ocean-florida-caribbean.jpg?w=135&h=90&f=88ff36624bb5df88f20c3d1e85445a53"
+                alt=""
+                class="float-left pr-3 pb-2"
+              />
+              <h4 class="h6">
+                <a class="w-100 black" href="#"
+                  >Hurricane Dorian: Bahamas Videos and Photos Show 'Complete
+                  Devastation'</a
+                >
+              </h4>
+              <div class="f-15 text-dark">
+                The storm hit the Bahamas on Sunday afternoon, bringing with it
+                strong winds, heavy rain and massive storm surges which left
+                homes and businesses underwater.
+              </div>
+            </article>
+
+            <article class="clearfix py-3 border-bottom">
+              <img
+                src="https://d.newsweek.com/en/full/1524449/moon-far-side.jpg?w=135&h=90&f=ac27065d93fe759136788f9b90435edc"
+                alt=""
+                class="float-left pr-3 pb-2"
+              />
+              <h4 class="h6">
+                <a class="w-100 black" href="#"
+                  >Weird 'Gel-like' Substance Found on Moon by China's Lunar
+                  Rover</a
+                >
+              </h4>
+              <div class="f-15 text-dark">
+                State-run newspaper said scientists are "trying to figure out"
+                what they mystery material is.
+              </div>
+            </article>
+
+            <article class="clearfix py-3 border-bottom">
+              <img
+                src="https://d.newsweek.com/en/full/1524407/donald-trump.jpg?w=135&h=90&f=aec2e288c0304dcb47371468a611fee2"
+                alt=""
+                class="float-left pr-3 pb-2"
+              />
+              <h4 class="h6">
+                <a class="w-100 black" href="#"
+                  >Donald Trump Says He's 'Not Sure' If He's Heard of a Category
+                  5 Hurricane</a
+                >
+              </h4>
+              <div class="f-15 text-dark">
+                Hurricane Dorian on Sunday became the fourth Category five
+                hurricane to threaten the U.S. under Trump's presidency.
+              </div>
+            </article>
+
+            <article class="clearfix py-3 border-bottom">
+              <img
+                src="https://d.newsweek.com/en/full/1524431/el-paso-shooting.jpg?w=135&h=90&f=0d20a430c3fd56349b08ea72292e8755"
+                alt=""
+                class="float-left pr-3 pb-2"
+              />
+              <h4 class="h6">
+                <a class="w-100 black" href="#"
+                  >El Paso Shooting: Gunman on the Run After One Person Killed
+                  at Texas Bar</a
+                >
+              </h4>
+              <div class="f-15 text-dark">
+                The incident occurred after two recent mass shootings in the
+                state of Texas.
+              </div>
+            </article>
+
+            <article class="clearfix py-3 border-bottom">
+              <img
+                src="https://d.newsweek.com/en/full/1524461/great-barrier-reef.jpg?w=135&h=90&f=39b41e7317741c9d09cfb5937f47cf6f"
+                alt=""
+                class="float-left pr-3 pb-2"
+              />
+              <h4 class="h6">
+                <a class="w-100 black" href="#"
+                  >Great Barrier Reef Is Becoming a 'Theme Park,' Tour Operator
+                  Warns</a
+                >
+              </h4>
+              <div class="f-15 text-dark">
+                "The tourism industry, desperate to maintain tourist numbers, is
+                looking beyond the natural beauty of the reef because it's not
+                quite what it was," said dive operator Tony Fontes.
+              </div>
+            </article>
+
+            <article class="clearfix py-3 border-bottom">
+              <img
+                src="https://d.newsweek.com/en/full/1524380/kunduz-province.jpg?w=135&h=90&f=51412559e138793c3698ac5e8be4a2dc"
+                alt=""
+                class="float-left pr-3 pb-2"
+              />
+              <h4 class="h6">
+                <a class="w-100 black" href="#"
+                  >Taliban Suicide Bomber Attacks Strategic City Amid
+                  Negotiations With US
+                </a>
+              </h4>
+              <div class="f-15 text-dark">
+                Reports say at least three civilians and dozens of fighters
+                died.
+              </div>
+            </article>
+            <article class="clearfix py-3 border-bottom">
+              <img
+                src="https://d.newsweek.com/en/full/1524369/protestors-nyc-hold-rally-against-illegal-guns-gun-violence.jpg?w=135&h=90&f=84e196ff018a84264e408b38d91bf03a"
+                alt=""
+                class="float-left pr-3 pb-2"
+              />
+              <h4 class="h6">
+                <a class="w-100 black" href="#"
+                  >Gun Control Groups Outspend NRA Since August Mass
+                  Shootings</a
+                >
+              </h4>
+              <div class="f-15 text-dark">
+                Reversing a Washington norm, gun control groups spent more on
+                lobbying during the 2018 midterms than the NRA did
+              </div>
+            </article>
+
+            <article class="clearfix py-3">
+              <img
+                src="https://d.newsweek.com/en/full/1524404/matt-schaefer-texas-gun-control.png?w=135&h=90&f=73b973ee4155f195ba879f93396b8ac0"
+                alt=""
+                class="float-left pr-3 pb-2"
+              />
+              <h4 class="h6">
+                <a class="w-100 black" href="#"
+                  >Texas Republican Says God, Prayer Can Curb Future Mass
+                  Shootings</a
+                >
+              </h4>
+              <div class="f-15 text-dark">
+                Texas Republican congressman Matt Schaefer railed against
+                Americans calling for lawmakers to "do something" about mass
+                shootings, arguing via Twitter Saturday that God and prayer are
+                more effective than gun control regulations.
+              </div>
+            </article>
+          </div>
+
+          <div class="col">
+            <div class="block-title pb-2 text-secondary">OPINION</div>
+          </div>
+        </section>
+      </main>
     </div>
 
     <!--Bootstrap jquery-->
