mobile view completed

--- a/index.html
+++ b/index.html
@@ -20,19 +20,14 @@
   <body class="light-blue">
     <div class="page-container mx-auto white">
       <header>
-        <div class="page-header orange"></div>
+        <div class="page-header">
+          <img src="./assets/images/newsweek-header-logo-sm.png" alt="">
+          <a href="#"><img src="/assets/images/hamburger.png" alt=""></a>
+          <a href="#">SUBSCRIBE</a>
+          <a href="#">SIGN IN</a>
+        </div>
+
         <nav class="navbar navbar-expand-lg navbar-light border-bottom p-0">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
 
           <div
             class="collapse navbar-collapse py-3"
@@ -95,7 +90,7 @@
           </div>
         </nav>
       </header>
-      <main class="p-4">
+      <main class="py-4 px-3">
         <section class="row">
           <!--
 
@@ -186,6 +181,7 @@
             <div class="pb-4">
               <span>
                 <img
+                class="w-100"
                   src="https://d.newsweek.com/en/full/1519876/carnegie-mellon-university-qatar.jpg?w=343&h=229&f=57c1d19c26bf5286b03b21ad9c7c9fd4"
                   alt=""
                 />
@@ -208,6 +204,7 @@
             <div class="pb-4">
               <span>
                 <img
+                class="w-100"
                   src="https://d.newsweek.com/en/full/1511789/best-nursing-homes-2020.png?w=343&h=229&f=e06577dec7407f9f74d2443585296125"
                   alt=""
                 />
@@ -665,6 +662,7 @@
             <div class="pb-5">
               <span>
                 <img
+                  class="w-100"
                   src="https://d.newsweek.com/en/full/1502124/university-southern-california-sol-price-school-public-policy.jpg?w=343&h=229&f=56b039bb46a2a59b29eca71cd945a024"
                   alt=""
                 />
@@ -689,6 +687,7 @@
             <div class="pb-4">
               <span>
                 <img
+                  class="w-100"
                   src="https://d.newsweek.com/en/full/1521810/topix-college-football.jpg?w=343&h=229&l=0&t=0&f=9a62b1c3dd6955a84ca3bbc6f26d894d"
                   alt=""
                 />
@@ -707,16 +706,16 @@
         
         <section class="magazine py-3">
           <div class="d-flex flex-row row mx-auto">
-            <article class="d-flex flex-column col-sm-12"><img class="pointer" src="https://d.newsweek.com/en/full/1530990/october-04-2019.jpg?w=290&h=387&q=90&f=8d9a946387c8b7c1bd00124356d8989f" alt="">
+            <article class="d-flex flex-column col-sm-12 p-0"><img class="pointer" src="https://d.newsweek.com/en/full/1530990/october-04-2019.jpg?w=290&h=387&q=90&f=8d9a946387c8b7c1bd00124356d8989f" alt="">
               <a class="d-flex justify-content-center p-2 bg-light-grey roboto" href="#">SEE ALL FEATURES   ></a>
             </article>
-            <div class="row">
+            <div class="page-container row mx-auto">
               <div class="px-0 d-flex justify-content-center border-bottom col-12 roboto light-black f-19">
                 <span></span>
                 IN THE MAGAZINE
               </div>
               <div class="d-flex row">
-                <article class="col-xs-12 col-sm-12 col-md-12">
+                <article class="col-12 col-sm-12 col-md-12 px-2">
                   <img class="mb-2 pointer w-100" src="https://d.newsweek.com/en/full/1528101/fe-anthropocene-01.jpg?w=466&h=311&q=90&f=b865e2814d95b55d2831e7faee0b2828" alt="">
                   <div class="mb-2">
                     <span class="px-2 orange c-white p-1 f-16 roboto">FEATURES</span>
@@ -724,15 +723,15 @@
                   </div>
                   <h5><a class="roboto black" href="#">Dramatic Photos Capture How Humans Have Changed the Earth</a></h5>
                 </article>
-                <article class="col-xs-12 col-md-12">
+                <article class="col-12 col-sm-12 col-md-12 px-2">
                   <img class="mb-2 pointer w-100" src="https://d.newsweek.com/en/full/1528101/fe-anthropocene-01.jpg?w=466&h=311&q=90&f=b865e2814d95b55d2831e7faee0b2828" alt="">
                   <div class="mb-2">
-                    <span class="px-2 orange c-white p-1 f-16 roboto">FEATURES</span>
+                    <span class="px-2 orange c-white p-1f-16 roboto">FEATURES</span>
                     <span class="roboto c-orange">WORLD</span>
                   </div>
                   <h5><a class="roboto black" href="#">Dramatic Photos Capture How Humans Have Changed the Earth</a></h5>
                 </article>
-                <article class="col-xs-12 col-md-12">
+                <article class="col-12 col-sm-12 col-md-12 px-2">
                   <img class="mb-2 pointer w-100" src="https://d.newsweek.com/en/full/1528101/fe-anthropocene-01.jpg?w=466&h=311&q=90&f=b865e2814d95b55d2831e7faee0b2828" alt="">
                   <div class="mb-2">
                     <span class="px-2 orange c-white p-1 f-16 roboto">FEATURES</span>
@@ -745,7 +744,7 @@
           </div>
 
           <div class="row-section row d-flex py-4">
-            <article class="col-sm-12 col-md-12">
+            <article class="col-12 col-sm-12 col-md-12 px-2">
               <a href="#">
                 <img class="mb-2 pointer" src="https://d.newsweek.com/en/full/1529291/per-lexisnexis-01-690638815-banner.jpg?w=466&h=311&l=79&t=50&q=90&f=c6185f94ece2d3355f16885089cdd8c7" alt="">
               </a>
@@ -755,7 +754,7 @@
               </div>
               <h5><a class="roboto black" href="#">When LexisNexis Makes a Mistake, You Pay For It</a></h5>
             </article>    
-            <article class="col-sm-12 col-md-12">
+            <article class="col-12 col-sm-12 col-md-12 px-2">
               <a href="#">
                 <img class="mb-2 pointer" src="https://d.newsweek.com/en/full/1529291/per-lexisnexis-01-690638815-banner.jpg?w=466&h=311&l=79&t=50&q=90&f=c6185f94ece2d3355f16885089cdd8c7" alt="">
               </a>
@@ -765,7 +764,7 @@
               </div>
               <h5><a class="roboto black" href="#">When LexisNexis Makes a Mistake, You Pay For It</a></h5>
             </article>    
-            <article class="col-sm-12 col-md-12">
+            <article class="col-12 col-sm-12 col-md-12 px-2">
               <a href="#">
                 <img class="mb-2 pointer" src="https://d.newsweek.com/en/full/1529291/per-lexisnexis-01-690638815-banner.jpg?w=466&h=311&l=79&t=50&q=90&f=c6185f94ece2d3355f16885089cdd8c7" alt="">
               </a>
@@ -775,7 +774,7 @@
               </div>
               <h5><a class="roboto black" href="#">When LexisNexis Makes a Mistake, You Pay For It</a></h5>
             </article>    
-            <article class="col-sm-12 col-md-12">
+            <article class="col-12 col-sm-12 col-md-12 px-2">
               <a href="#">
                 <img class="mb-2 pointer w-100" src="https://d.newsweek.com/en/full/1529291/per-lexisnexis-01-690638815-banner.jpg?w=466&h=311&l=79&t=50&q=90&f=c6185f94ece2d3355f16885089cdd8c7" alt="">
               </a>
@@ -799,7 +798,7 @@
         <section class="editors-pick">
           <div class="d-flex justify-content-center roboto f-19 pb-2 mb-3 border-bottom">EDITOR'S PICK</div>
           <div class="row pb-4">
-            <article class="col-12 col-sm-12 col-md-6 col-lg-3">
+            <article class="col-12 col-sm-12 col-md-6 col-lg-3 px-2">
               <a href="#">
                 <img class="w-100" src="https://d.newsweek.com/en/full/1531507/president-trump-arrives-back-white-house-after-trip-new-york-united-nations-general-assembly.jpg?w=397&h=265&f=6a414123c14252883ca58ff8f1559b80" alt="">
               </a>
@@ -812,7 +811,7 @@
                 Trump appears to have put his electoral stock fully in the gun-rights crowd, and at a point when the politics of gun control are shifting for the first time in decades.
               </div>
             </article>
-            <article class="col-12 col-sm-12 col-md-6 col-lg-3">
+            <article class="col-12 col-sm-12 col-md-6 col-lg-3 px-2">
               <a href="#">
                 <img class="w-100" src="https://d.newsweek.com/en/full/1531507/president-trump-arrives-back-white-house-after-trip-new-york-united-nations-general-assembly.jpg?w=397&h=265&f=6a414123c14252883ca58ff8f1559b80" alt="">
               </a>
@@ -825,7 +824,7 @@
                 Trump appears to have put his electoral stock fully in the gun-rights crowd, and at a point when the politics of gun control are shifting for the first time in decades.
               </div>
             </article>
-            <article class="col-12 col-sm-12 col-md-6 col-lg-3">
+            <article class="col-12 col-sm-12 col-md-6 col-lg-3 px-2">
               <a href="#">
                 <img class="w-100" src="https://d.newsweek.com/en/full/1531507/president-trump-arrives-back-white-house-after-trip-new-york-united-nations-general-assembly.jpg?w=397&h=265&f=6a414123c14252883ca58ff8f1559b80" alt="">
               </a>
@@ -838,7 +837,7 @@
                 Trump appears to have put his electoral stock fully in the gun-rights crowd, and at a point when the politics of gun control are shifting for the first time in decades.
               </div>
             </article>
-            <article class="col-12 col-sm-12 col-md-6 col-lg-3">
+            <article class="col-12 col-sm-12 col-md-6 col-lg-3 px-2">
               <a href="#">
                 <img class="w-100" src="https://d.newsweek.com/en/full/1531507/president-trump-arrives-back-white-house-after-trip-new-york-united-nations-general-assembly.jpg?w=397&h=265&f=6a414123c14252883ca58ff8f1559b80" alt="">
               </a>
@@ -853,7 +852,7 @@
             </article>
           </div>
           <div class="row">
-            <article class="col-12 col-sm-12 col-md-6 col-lg-3">
+            <article class="col-12 col-sm-12 col-md-6 col-lg-3 px-2">
               <a href="#">
                 <img class="w-100" src="https://d.newsweek.com/en/full/1531507/president-trump-arrives-back-white-house-after-trip-new-york-united-nations-general-assembly.jpg?w=397&h=265&f=6a414123c14252883ca58ff8f1559b80" alt="">
               </a>
@@ -866,7 +865,7 @@
                 Trump appears to have put his electoral stock fully in the gun-rights crowd, and at a point when the politics of gun control are shifting for the first time in decades.
               </div>
             </article>
-            <article class="col-12 col-sm-12 col-md-6 col-lg-3">
+            <article class="col-12 col-sm-12 col-md-6 col-lg-3 px-2">
               <a href="#">
                 <img class="w-100" src="https://d.newsweek.com/en/full/1531507/president-trump-arrives-back-white-house-after-trip-new-york-united-nations-general-assembly.jpg?w=397&h=265&f=6a414123c14252883ca58ff8f1559b80" alt="">
               </a>
@@ -879,7 +878,7 @@
                 Trump appears to have put his electoral stock fully in the gun-rights crowd, and at a point when the politics of gun control are shifting for the first time in decades.
               </div>
             </article>
-            <article class="col-12 col-sm-12 col-md-6 col-lg-3">
+            <article class="col-12 col-sm-12 col-md-6 col-lg-3 px-2">
               <a href="#">
                 <img class="w-100" src="https://d.newsweek.com/en/full/1531507/president-trump-arrives-back-white-house-after-trip-new-york-united-nations-general-assembly.jpg?w=397&h=265&f=6a414123c14252883ca58ff8f1559b80" alt="">
               </a>
@@ -892,7 +891,7 @@
                 Trump appears to have put his electoral stock fully in the gun-rights crowd, and at a point when the politics of gun control are shifting for the first time in decades.
               </div>
             </article>
-            <article class="col-12 col-sm-12 col-md-6 col-lg-3">
+            <article class="col-12 col-sm-12 col-md-6 col-lg-3 px-2">
               <a href="#">
                 <img class="w-100" src="https://d.newsweek.com/en/full/1531507/president-trump-arrives-back-white-house-after-trip-new-york-united-nations-general-assembly.jpg?w=397&h=265&f=6a414123c14252883ca58ff8f1559b80" alt="">
               </a>
@@ -1062,46 +1061,46 @@
 
         -->
 
-        <section class="d-flex py-5 border-top">
-          <div class="col-8 pl-0">
+        <section class="d-flex pt-5 pb-3 border-top flex-wrap">
+          <div class="col-12 col-xl-7 pl-0 pr-0">
             <div class="c-orange roboto pl-0 pb-2">SUBSCRIBE</div>
-            <div class="subscribe-left bg-light-grey p-4 d-flex">
-              <div>
-                <img src="https://d.newsweek.com/en/full/1528173/september-27-2019.jpg?w=170&q=95&f=9ebb28c380cf4a6557a4cf4d18d55d2a" alt="">
+            <div class="subscribe-left bg-light-grey d-flex">
+              <div class="img-container">
+                <img class="bottom-image"src="https://d.newsweek.com/en/full/1528173/september-27-2019.jpg?w=170&q=95&f=9ebb28c380cf4a6557a4cf4d18d55d2a" alt="">
                 <img class="overlayed-image" src="https://d.newsweek.com/en/full/1530990/october-04-2019.jpg?w=170&q=95&f=8b92e658aff6a3e8b4d133564ee1fc37" alt="">
               </div>
-              <div class="pl-5">
+              <div class="text-container p-2">
                 <h4 class="roboto mb-4">In-depth Stories You Don't See Elsewhere About Topics You Want to Read!</h4>
-                <p class="f-15 mb-5">
+                <p class="f-15 mb-4">
                   All Access + Weekly Delivery. <br> Choose A Membership That's Perfect for You!
                 </p>
-                <span class="orange-button">
+                <span class="orange-button pointer">
                   SUBSCRIBE >
                 </span>
               </div>
             </div>
           </div>
-          <div class="col-4 pl-4 pr-0">
-            <div class="c-orange roboto pb-2">NEWSLETTER</div>
-            <div class="d-flex border-bottom border-top border-right">
+          <div class="newsletter-bottom col-12 col-xl-5 pr-0 pl-0 row mx-auto">
+            <div class="c-orange roboto pb-2 mt-3">NEWSLETTER</div>
+            <div class="d-flex border-bottom border-top border-right border-left">
               <div class="footer-image"></div>
-              <div class="w-50 p-4">
+              <div class="w-50 p-4 col-12">
                 <h4 class="roboto">Daily Briefing</h4>
                 <p class="f-15">Take back your inbox. Sign up for our newsletter and start making sense of the world around you.</p>
-                <span class="orange-button">SIGN UP ></span>
+                <span class="orange-button pointer">SIGN UP ></span>
               </div>
             </div>
           </div>
         </section>
       </main>
 
-        <footer class="p-4 border-top container-fluid py-3 px-4">
-          <div class="d-flex justify-content-between border-bottom pb-3">
-            <div class="d-flex f-12 p-0">
+        <footer class="footer border-top container-fluid pt-3 px-4">
+          <div class="d-flex justify-content-between border-bottom">
+            <div class="d-flex f-12 p-0 flex-wrap">
               <img src="./assets/images/newsweek-logo.png" alt="">
               <p class="f-12 mb-0">© 2019 NEWSWEEK</p>
             </div>
-            <ul>
+            <ul class="social-links">
               <li>
                 <i class="fa fa-facebook"></i>
                 <i class="fa fa-twitter"></i>
@@ -1112,30 +1111,30 @@
             </ul>
           </div>
           <div class="footer-links d-flex row">
-            <ul class="d-flex mt-3 flex-wrap col-7">
-              <li class="px-3 border-right h-25"><a href="#">About Us</a></li>
-              <li class="px-3 border-right h-25"><a href="#">Corrections</a></li>
-              <li class="px-3 border-right h-25"><a href="#">Contact Us</a></li>
-              <li class="px-3 border-right h-25"><a href="#">Editorial Guidelines</a></li>
-              <li class="px-3 border-right h-25"><a href="#">Advertise</a></li>
-              <li class="px-3 border-right h-25"><a href="#">Copyright</a></li>
-              <li class="px-3 border-right h-25"><a href="#">Terms & Conditions</a></li>
-              <li class="px-3 border-right h-25"><a href="#">Privacy Policy</a></li>
-              <li class="px-3 border-right h-25"><a href="#">Cookie Policy</a></li>
-              <li class="px-3 border-right h-25"><a href="#">Terms of Sale</a></li>
-              <li class="px-3 border-right h-25"><a href="#">Archive</a></li>
-              <li class="px-3 border-right h-25"><a href="#">Announcements</a></li>
-              <li class="px-3 border-right h-25"><a href="#">Consent preferences</a></li>
+            <ul class="d-flex mt-3 mb-0 flex-wrap col-12">
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Corrections</a></li>
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Editorial Guidelines</a></li>
+              <li><a href="#">Advertise</a></li>
+              <li><a href="#">Copyright</a></li>
+              <li><a href="#">Terms & Conditions</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Cookie Policy</a></li>
+              <li><a href="#">Terms of Sale</a></li>
+              <li><a href="#">Archive</a></li>
+              <li><a href="#">Announcements</a></li>
+              <li><a href="#">Consent preferences</a></li>
             </ul>
-            <div class="d-flex mt-3 col-5">
+            <div class="footer-lang d-flex col-12">
               <span>Editions:</span>
-              <ul class="d-flex flex-wrap">
-                <li class="px-3 border-right h-25"><a href="#">U.S</a></li>
-                <li class="px-3 border-right h-25"><a href="#">Chinese</a></li>
-                <li class="px-3 border-right h-25"><a href="#">Japanese</a></li>
-                <li class="px-3 border-right h-25"><a href="#">Pakistan</a></li>
-                <li class="px-3 border-right h-25"><a href="#">Russian</a></li>
-                <li class="px-3 border-right h-25"><a href="#">Armenian</a></li>
+              <ul class="d-flex flex-wrap pl-3">
+                <li ><a href="#">Armenian</a></li>
+                <li ><a href="#">Chinese</a></li>
+                <li ><a href="#">Japanese</a></li>
+                <li ><a href="#">Pakistan</a></li>
+                <li ><a href="#">Russian</a></li>
+                <li ><a href="#">U.S</a></li>
               </ul>
             </div>
           </div>
