--- a/index.html
+++ b/index.html
@@ -20,11 +20,21 @@
   <body class="light-blue">
     <div class="page-container mx-auto white">
       <header>
-        <div class="page-header">
+        <div class="page-header-mobile d-lg-none d-sm-block">
           <img src="./assets/images/newsweek-header-logo-sm.png" alt="">
           <a href="#"><img src="/assets/images/hamburger.png" alt=""></a>
           <a href="#">SUBSCRIBE</a>
           <a href="#">SIGN IN</a>
+        </div>
+        <div class="page-header-desktop justify-content-between d-sm-none d-lg-flex px-4">
+          <span class="c-white d-flex align-self-end pb-3">Thu, Oct 3, 2019</span>
+          <a href="#">
+            <img src="./assets/images/newsweek-header-logo-sm.png" alt="">
+          </a>
+          <div class="d-flex align-self-end pb-3">
+            <a class="header-signin-button" href="#">SIGN IN</a>
+            <a class="header-subscribe-button" href="#">SUBSCRIBE</a>
+          </div>
         </div>
 
         <nav class="navbar navbar-expand-lg navbar-light border-bottom p-0">
@@ -35,57 +45,60 @@
           >
             <ul class="navbar-nav d-flex justify-content-between">
               <li class="nav-item">
-                <a class="nav-link black roboto roboto h5 px-4 m-0 p-0 border-right" href="#"
+                <a class="nav-link black roboto roboto h5 px-4 px-lg-2 m-0 p-0 border-right" href="#"
                   >U.S.</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link black roboto h5 px-4 p-0 m-0 border-right" href="#"
+                <a class="nav-link black roboto h5 px-4 px-lg-2 p-0 m-0 border-right" href="#"
                   >World</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link black roboto h5 px-4 p-0 m-0 border-right" href="#"
+                <a class="nav-link black roboto h5 px-4 px-lg-2 p-0 m-0 border-right" href="#"
                   >Business</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link black roboto h5 px-4 p-0 m-0 border-right" href="#"
+                <a class="nav-link black roboto h5 px-4 px-lg-2 p-0 m-0 border-right" href="#"
                   >Tech & Science</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link black roboto h5 px-4 p-0 m-0 border-right" href="#"
+                <a class="nav-link black roboto h5 px-4 px-lg-2 p-0 m-0 border-right" href="#"
                   >Culture</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link black roboto h5 px-4 p-0 m-0 border-right" href="#"
+                <a class="nav-link black roboto h5 px-4 px-lg-2 p-0 m-0 border-right" href="#"
                   >Newsgeek</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link black roboto h5 px-4 p-0 m-0 border-right" href="#"
+                <a class="nav-link black roboto h5 px-4 px-lg-2 p-0 m-0 border-right" href="#"
                   >Sports</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link black roboto h5 px-4 p-0 m-0 border-right" href="#"
+                <a class="nav-link black roboto h5 px-4 px-lg-2 p-0 m-0 border-right" href="#"
                   >Health</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link black roboto px-4 h5 p-0 m-0 border-right" href="#"
+                <a class="nav-link black roboto px-4 px-lg-2 h5 p-0 m-0 border-right" href="#"
                   >Opinion</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link black roboto h5 px-4 m-0 p-0 border-right" href="#"
+                <a class="nav-link black roboto h5 px-4 px-lg-2 m-0 p-0 border-right" href="#"
                   >Vantage</a
                 >
               </li>
 
-              <li class="nav-item dropdown"></li>
+              <li class="nav-item dropdown py-0">
+                <input class="input" type="text" placeholder="Search">
+                <span class="fa fa-search"></span>
+              </li>
             </ul>
           </div>
         </nav>
@@ -98,7 +111,7 @@
             ONE 
 
           -->
-          <div class="col-12 col-md-5 col-lg col-xl sticky-bottom order-2 order-sm-2 order-md-1">
+         <div class="col-12 col-md-5 col-lg-4 col-xl sticky-bottom order-2 order-sm-2 order-md-1">
             <div class="block-title pb-2 roboto text-secondary">
               FEATURED STORIES
             </div>
@@ -225,7 +238,7 @@
 
           -->
 
-          <div class="col-12 col-md-7 order-1 order-sm-1 order-md-2">
+          <div class="col-12 col-md-7 col-lg-5 order-1 order-sm-1 order-md-2">
             <div class="block-title d-block pb-2 roboto text-secondary">
               TOP STORY
             </div>
@@ -547,7 +560,7 @@
 
           -->
 
-          <div class="col col-sm col-md order-3 order-sm-3 order-md-3">
+          <div class="col col-sm col-md-12 col-lg-3 order-3 order-sm-3 order-md-3">
             <div class="block-title pb-2 roboto text-secondary">OPINION</div>
 
             <ul class="unstyled-list">
@@ -632,67 +645,67 @@
             <ul class="unstyled-list">
 
               <li class="d-flex flex-row pb-2 border-bottom page-container mx-auto row">
-                <a class="col-4 col-sm-6 col-md-2 px-0" href="#">
+                <a class="col-4 col-sm-6 col-md-2 col-lg-6 px-0" href="#">
                   <img class="w-100" src="https://d.newsweek.com/en/full/1524166/dog-pet-owner-animal-stock-getty.jpg?w=397&h=265&f=6922d3060537b630f7f0e9cf1c709bad" alt="" class="mr-3 img-sm">
                 </a>
-                <div class="info col-8 col-sm-6 col-md-10"><a class="black hover f-17 roboto" href="#">Humans Have Bred Dogs so Much We've Changed the Shape of Their Brains</a></div>
+                <div class="info col-8 col-sm-6 col-md-10 col-lg-6"><a class="black hover f-17 roboto" href="#">Humans Have Bred Dogs so Much We've Changed the Shape of Their Brains</a></div>
               </li>
 
               <li class="d-flex flex-row flex-xs py-2 border-bottom page-container mx-auto row">
-                <a class="col-4 col-sm-6 col-md-2 px-0" href="#">
+                <a class="col-4 col-sm-6 col-md-2 col-lg-6 px-0" href="#">
                   <img class="w-100" src="https://d.newsweek.com/en/full/1430829/br21-logo-1920x10804.jpg?w=397&h=265&f=23121586bf0e68454ea343cf8cd4dfc0" alt="" class="mr-3 img-sm">
                 </a>
-                <div class="info col-8 col-sm-6 col-md-10"><a class="black hover f-17 roboto" href="#">
+                <div class="info col-8 col-sm-6 col-md-10 col-lg-6"><a class="black hover f-17 roboto" href="#">
                   Fans Slam 'Big Brother' Casting After Houseguests Were Cast In February
                 </a></div>
               </li>
 
               <li class="d-flex flex-row flex-xs py-2 border-bottom page-container mx-auto row">
-                <a class="col-4 col-sm-6 col-md-2 px-0" href="#">
+                <a class="col-4 col-sm-6 col-md-2 col-lg-6 px-0" href="#">
                   <img class="w-100" src="https://d.newsweek.com/en/full/1524512/hurricane-katrina-car.jpg?w=397&h=265&f=aee887c43212826486c6f673fd6bba66" alt="" class="mr-3 img-sm">
                 </a>
-                <div class="info col-8 col-sm-6 col-md-10"><a class="black hover f-17 roboto" href="#">Two Cars Swept Away During Katrina Among Debris Removed From NOLA Canals</a></div>
+                <div class="info col-8 col-sm-6 col-md-10 col-lg-6"><a class="black hover f-17 roboto" href="#">Two Cars Swept Away During Katrina Among Debris Removed From NOLA Canals</a></div>
               </li>
 
               <li class="d-flex flex-row flex-xs py-2 border-bottom page-container mx-auto row">
-                <a class="col-4 col-sm-6 col-md-2 px-0" href="#">
+                <a class="col-4 col-sm-6 col-md-2 col-lg-6 px-0" href="#">
                   <img class="w-100" src="https://d.newsweek.com/en/full/1524505/earth.jpg?w=397&h=265&l=53&t=42&f=125e6f707b14bf5094ccd3c06d96ed11" alt="" class="mr-3 img-sm">
                 </a>
-                <div class="info col-8 col-sm-6 col-md-10"><a class="black hover f-17 roboto" href="#">Two Billion Years Ago, up to 99 Percent of Life on Earth Died</a></div>
+                <div class="info col-8 col-sm-6 col-md-10 col-lg-6"><a class="black hover f-17 roboto" href="#">Two Billion Years Ago, up to 99 Percent of Life on Earth Died</a></div>
               </li>
 
               <li class="d-flex flex-row flex-xs py-2 border-bottom  page-container mx-auto row">
-                <a class="col-4 col-sm-6 col-md-2 px-0" href="#">
+                <a class="col-4 col-sm-6 col-md-2 col-lg-6 px-0" href="#">
                   <img class="w-100" src="https://d.newsweek.com/en/full/1524502/easyjet.jpg?w=397&h=265&f=f78e06cc2be7fceea4aff454ffe73c7a" alt="" class="mr-3 img-sm">
                 </a>
-                <div class="info col-8 col-sm-6 col-md-10"><a class="black hover f-17 roboto" href="#">Plane Makes Emergency Landing After Woman Allegedly Assaults Cabin Crew</a></div>
+                <div class="info col-8 col-sm-6 col-md-10 col-lg-6"><a class="black hover f-17 roboto" href="#">Plane Makes Emergency Landing After Woman Allegedly Assaults Cabin Crew</a></div>
               </li>
 
               <li class="d-flex flex-row flex-xs py-2 border-bottom  page-container mx-auto row">
-                <a class="col-4 col-sm-6 col-md-2 px-0" href="#">
+                <a class="col-4 col-sm-6 col-md-2 col-lg-6 px-0" href="#">
                   <img class="w-100" src="https://d.newsweek.com/en/full/1524484/celebrate-labor-day-these-10-refreshing-cocktails.jpg?w=397&h=265&f=ddf19fa3e0bec464d53c68d97e15a78e" alt="" class="mr-3 img-sm">
                 </a>
-                <div class="info col-8 col-sm-6 col-md-10"><a class="black hover f-17 roboto" href="#">Celebrate Labor Day With These 7 Refreshing Cocktails</a></div>
+                <div class="info col-8 col-sm-6 col-md-10 col-lg-6"><a class="black hover f-17 roboto" href="#">Celebrate Labor Day With These 7 Refreshing Cocktails</a></div>
               </li>
 
               <li class="d-flex flex-row flex-xs pt-2 pb-4 page-container mx-auto row">
-                <a class="col-4 col-sm-6 col-md-2 px-0" href="#">
+                <a class="col-4 col-sm-6 col-md-2 col-lg-6 px-0" href="#">
                   <img class="w-100" src="https://d.newsweek.com/en/full/1524503/iran-russia-sergey-lavrov-javad-zarif.jpg?w=397&h=265&f=cb211f878f3a99696d102e434e8462c1" alt="" class="mr-3 img-sm">
                 </a>
-                <div class="info col-8 col-sm-6 col-md-10"><a class="black hover f-17 roboto" href="#">Russia Condemns U.S. 'Provocation' of Iran As 'Absolutely Unacceptable</a></div>
+                <div class="info col-8 col-sm-6 col-md-10 col-lg-6"><a class="black hover f-17 roboto" href="#">Russia Condemns U.S. 'Provocation' of Iran As 'Absolutely Unacceptable</a></div>
               </li>
 
             </ul>
 
             <div class="pb-5 row page-container mx-auto d-md-flex flex-md-column align-content-md-center">
-              <span class="col-12 col-md-6 px-0">
+              <span class="col-12 col-md-6 col-lg-12 px-0">
                 <img
                   class="w-100"
                   src="https://d.newsweek.com/en/full/1502124/university-southern-california-sol-price-school-public-policy.jpg?w=343&h=229&f=56b039bb46a2a59b29eca71cd945a024"
                   alt=""
                 />
               </span>
-              <div class="p-4 border col-12 col-md-6">
+              <div class="p-4 border col-12 col-md-6 col-lg-12">
                 <h5 class="pb-2 m-0">
                   <a class="d-block black roboto h4 m-0" href="#">What can a career in public affairs, policy & administration do for you?</a>
                 </h5>
@@ -702,14 +715,14 @@
               </div>
             </div>
 
-            <div class="newsletter mx-4 mb-4 p-4 border light-blue col-12 col-md-5 mx-auto">
+            <div class="newsletter mx-4 mb-4 p-4 border light-blue col-12 col-md-5 col-lg-12 mx-auto">
               <span class="icon"></span>
               <div class="title roboto h5 pb-3 m-0">SIGN UP FOR OUR NEWSLETTER</div>
               <a class="sign-up roboto d-block c-white px-3 py-2 mb-3" href="#">SIGN UP ></a>
               <a href="#" class="roboto f-15 d-block text-dark">Update your preferences >></a>
             </div>
 
-            <div class="pb-4 col-12 col-md-6 mx-auto">
+            <div class="pb-4 col-12 col-md-6 col-lg-12 d-lg-none mx-auto">
               <span>
                 <img
                   class="w-100"
@@ -1034,7 +1047,7 @@
             U.S.
             </h4>
             <div class="d-flex flex-wrap page-container mx-auto row">
-              <div class="col-sm-12 col-md-4 p-0">
+              <div class="col-sm-12 col-md-4 p-0 pr-md-4">
                 <a href="#">
                   <img class="img-fluid w-100 p-0" src="https://d.newsweek.com/en/full/1531510/bernie-sanders-sexism-msnbc-warren.jpg?w=397&h=265&f=105418f368423e3c7bf945e318d142cc" alt="">
                 </a>
@@ -1044,7 +1057,7 @@
                   </h4>
                 </a>
               </div>
-              <div class="col-sm-12 col-md-4 p-0">
+              <div class="col-sm-12 col-md-4 p-0 pr-md-4">
                 <a href="#">
                   <img class="img-fluid w-100" src="https://d.newsweek.com/en/full/1531510/bernie-sanders-sexism-msnbc-warren.jpg?w=397&h=265&f=105418f368423e3c7bf945e318d142cc" alt="">
                 </a>
@@ -1072,7 +1085,7 @@
                       </a>
                     </div>
                   </li>
-                  <li class="d-flex border-bottom py-3 page-container mx-auto row">
+                  <li class="d-flex py-3 page-container mx-auto row">
                     <a class="col-4 col-sm-6 pl-0" href="#"><img class="w-100" src="https://d.newsweek.com/en/full/1531495/hands-smartphone.jpg?w=135&h=90&f=df2f972b149c0b8bc4e8dd4bf1f44739" alt=""></a>
                     <div class="col-8 col-sm-6 px-0">
                       <a class="black" href="#">Family Say Teen Was 'Outed' by Cyberbullies Before Killing Himself
@@ -1093,9 +1106,9 @@
         -->
 
         <section class="d-flex pt-5 pb-3 border-top flex-wrap">
-          <div class="col-12 col-xl-7 pl-0 pr-0">
+          <div class="col-12 col-lg-8 col-xl-7 pl-0 pr-0">
             <div class="c-orange roboto pl-0 pb-2">SUBSCRIBE</div>
-            <div class="subscribe-left bg-light-grey d-flex">
+            <div class="subscribe-left bg-light-grey text-center text-md-left align-middle d-flex flex-column d-md-flex flex-md-row p-md-4">
               <div class="img-container">
                 <img class="bottom-image"src="https://d.newsweek.com/en/full/1528173/september-27-2019.jpg?w=170&q=95&f=9ebb28c380cf4a6557a4cf4d18d55d2a" alt="">
                 <img class="overlayed-image" src="https://d.newsweek.com/en/full/1530990/october-04-2019.jpg?w=170&q=95&f=8b92e658aff6a3e8b4d133564ee1fc37" alt="">
@@ -1111,11 +1124,11 @@
               </div>
             </div>
           </div>
-          <div class="newsletter-bottom col-12 col-xl-5 pr-0 pl-0 row mx-auto">
-            <div class="c-orange roboto pb-2 mt-3">NEWSLETTER</div>
-            <div class="d-flex border-bottom border-top border-right border-left">
-              <div class="footer-image"></div>
-              <div class="w-50 p-4 col-12">
+          <div class="newsletter-bottom col-12 col-lg-4 col-xl-5 pr-0 pl-0 pl-lg-4 row mx-auto h-100">
+            <div class="c-orange roboto pb-2">NEWSLETTER</div>
+            <div class="d-flex d-lg-flex flex-lg-row border-bottom border-top border-right border-left row page-container mx-auto">
+              <div class="footer-image col-md-3 col-lg-6 p-md-0"></div>
+              <div class=" p-4 col-12 col-md-9 col-lg-6 text-md-left">
                 <h4 class="roboto">Daily Briefing</h4>
                 <p class="f-15">Take back your inbox. Sign up for our newsletter and start making sense of the world around you.</p>
                 <span class="orange-button pointer">SIGN UP ></span>
@@ -1126,12 +1139,12 @@
       </main>
 
         <footer class="footer border-top container-fluid pt-3 px-4">
-          <div class="d-flex justify-content-between border-bottom">
-            <div class="d-flex d-sm-flex flex-sm-column f-12 p-0 flex-wrap">
-              <img class="w-50" src="./assets/images/newsweek-logo.png" alt="">
-              <p class="f-12 mb-0">© 2019 NEWSWEEK</p>
+          <div class="d-flex d-md-flex flex-md-row justify-content-between border-bottom">
+            <div class="d-flex d-sm-flex d-md-flex flex-sm-column flex-md-row f-12 p-0 flex-wrap">
+              <img class="w-50 mr-md-3 mb-md-3" src="./assets/images/newsweek-logo.png" alt="">
+              <p class="f-12 mb-0 mt-md-4">© 2019 NEWSWEEK</p>
             </div>
-            <ul class="social-links">
+            <ul class="social-links mt-md-4">
               <li>
                 <i class="fa fa-facebook"></i>
                 <i class="fa fa-twitter"></i>
